API Exposed.
