# dms-moi-workspace/modules/moi-api-handler/moi-api-handler-impl/src/main/java/com/moi/api/handler/internal/resource/v1_0/MosipAPIHandlerResourceImpl.java
@@ -7,17 +7,21 @@ import com.liferay.document.library.kernel.service.DLAppServiceUtil;
 import com.liferay.document.library.kernel.service.DLFolderLocalServiceUtil;
 import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.exception.PortalException;
+import com.liferay.portal.kernel.exception.SystemException;
 import com.liferay.portal.kernel.log.Log;
 import com.liferay.portal.kernel.log.LogFactoryUtil;
 import com.liferay.portal.kernel.model.Group;
 import com.liferay.portal.kernel.model.Role;
 import com.liferay.portal.kernel.model.role.RoleConstants;
+import com.liferay.portal.kernel.repository.model.FileEntry;
 import com.liferay.portal.kernel.repository.model.Folder;
 import com.liferay.portal.kernel.security.auth.CompanyThreadLocal;
 import com.liferay.portal.kernel.service.GroupLocalServiceUtil;
 import com.liferay.portal.kernel.service.ResourcePermissionServiceUtil;
 import com.liferay.portal.kernel.service.RoleLocalServiceUtil;
 import com.liferay.portal.kernel.service.ServiceContext;
+import com.liferay.portal.kernel.service.ServiceContextThreadLocal;
+import com.liferay.portal.kernel.util.FileUtil;
 import com.liferay.portal.kernel.util.Validator;
 import com.liferay.portal.vulcan.multipart.MultipartBody;
 import com.liferay.portal.vulcan.pagination.Page;
@@ -27,6 +31,7 @@ import com.moi.api.handler.internal.result.GenerateDocumentResult;
 import com.moi.api.handler.resource.v1_0.MosipAPIHandlerResource;
 import com.moi.dms.id.mapper.model.MOIIdMapper;
 import com.moi.dms.id.mapper.service.MOIIdMapperLocalServiceUtil;
+import com.moi.dms.mosip.constants.CommonConstants;
 import com.moi.dms.trace.request.model.MOITraceRequest;
 import com.moi.dms.trace.request.service.MOITraceRequestLocalServiceUtil;
 import com.moi.mosip.validator.MosipUtil;
@@ -58,6 +63,8 @@ public class MosipAPIHandlerResourceImpl
 	private String CURRENT_STATE_REGISTRATION="REGISTRATION";
 	private String CURRENT_STATE_FREEZED="FREEZED";
 	private String CURRENT_STATE_AGENT_FOR_PORTAL="AGENT_FOR_PORTAL";
+	// TODO: Ths is static user. Need to find a way to get original user.
+	private static long DEFAULT_USER_ID = 20130;
 	
 	@Override
 	public Page<DocumentResult> uploadMosipDocument(String ModuleType,
@@ -90,7 +97,7 @@ public class MosipAPIHandlerResourceImpl
 		if (Validator.isNotNull(validationResult)) {
 			return GenerateDocumentResult.generateDocumentResult(
 					moiTraceRequest.getRequestId(), APIConstants.FAILURE,
-					validationResult);
+					validationResult, null);
 		}
 
 		/* Identifier Check */
@@ -104,7 +111,7 @@ public class MosipAPIHandlerResourceImpl
 			MosipValidator.updateTraceRequest(GROUP_NOT_FOUND, moiTraceRequest);
 			return GenerateDocumentResult.generateDocumentResult(
 					moiTraceRequest.getRequestId(), APIConstants.FAILURE,
-					GROUP_NOT_FOUND);
+					GROUP_NOT_FOUND, null);
 		}
 		
 		if (Validator.isNull(idMapperList)) {
@@ -123,7 +130,89 @@ public class MosipAPIHandlerResourceImpl
 				IdentifierNumber, Metadata, PreviousModuleType,
 				PreviousIdentifier, multipartBody);
 	}
-	
+
+	@Override
+	public Page<DocumentResult> updateMosipDocument(String ModuleType,
+			String ConsumerCode, String DocumentType, String IdentifierNumber,
+			String Metadata, String PreviousModuleType,
+			String PreviousIdentifier, MultipartBody multipartBody)
+			throws Exception {
+		return super.updateMosipDocument(ModuleType, ConsumerCode, DocumentType,
+				IdentifierNumber, Metadata, PreviousModuleType, PreviousIdentifier,
+				multipartBody);
+	}
+
+	@Override
+	public Page<DocumentResult> getMosipDocument(String ModuleType,
+			String ConsumerCode, String DocumentType, String Identifier)
+			throws Exception {
+
+		// Authorize and authenticate user - To be done by OAuth 2.0
+		// Get user id & serviceContext
+		ServiceContext serviceContext = ServiceContextThreadLocal
+				.getServiceContext();
+		long userId = serviceContext.getUserId();
+
+		// TODO: Remove in actual implementation.
+		if (0 == userId) {
+			userId = DEFAULT_USER_ID;
+		}
+
+		debugLog("ModuleType: " + ModuleType);
+		debugLog("ConsumerCode: " + ConsumerCode);
+		debugLog("DocumentType: " + DocumentType);
+		debugLog("Identifier: " + Identifier);
+		debugLog("userId: " + userId);
+
+		/*
+		 * Entry Point : Trace the request
+		 */
+		MOITraceRequest moiTraceRequest = null;
+		try {
+			moiTraceRequest = MOITraceRequestLocalServiceUtil
+					.addMOITraceRequest(String.valueOf(userId), new Date(),
+							ConsumerCode, null,
+							MosipUtil.getAction(DocumentType, true),
+							DocumentType, false, null, null, StringPool.BLANK);
+		} catch (PortalException e) {
+			_log.error(e);
+		}
+
+		// TODO: Perform Validation:
+
+		// TODO: Start download process:
+		StringBuilder fileName = new StringBuilder(DocumentType)
+				.append(StringPool.UNDERLINE).append(Identifier);
+		Folder folder = getFolder(Identifier, false, serviceContext);
+		FileEntry fileEntry = getFileEntry(folder, fileName.toString(),
+				serviceContext);
+
+		if (null != fileEntry) {
+			return GenerateDocumentResult.generateDocumentResult(
+					moiTraceRequest.getRequestId(), APIConstants.SUCCESS,
+					"Successful",
+					FileUtil.getBytes(fileEntry.getContentStream()));
+		} else {
+			return GenerateDocumentResult.generateDocumentResult(
+					moiTraceRequest.getRequestId(), APIConstants.FAILURE,
+					"Failure", null);
+		}
+	}
+
+	@Override
+	public Page<DocumentResult> deleteMosipDocument(String ModuleType,
+			MultipartBody multipartBody) throws Exception {
+		// TODO Auto-generated method stub
+		return super.deleteMosipDocument(ModuleType, multipartBody);
+	}
+
+	@Override
+	public Page<DocumentResult> addIDCSNumber(String RegistrationNumber,
+			String IDCSNumber) throws Exception {
+		// TODO Auto-generated method stub
+		return super.addIDCSNumber(RegistrationNumber, IDCSNumber);
+	}
+
 	/*
 	 * This method is used to Process folder
 	 *
@@ -197,7 +286,7 @@ public class MosipAPIHandlerResourceImpl
 			MosipValidator.updateTraceRequest(UNABLE_TO_CREATE_FOLDER.replace(FOLDER_NAME_DYNAMIC_PARAM, folderName), moiTraceRequest);
 			return GenerateDocumentResult.generateDocumentResult(
 					moiTraceRequest.getRequestId(), APIConstants.FAILURE,
-					UNABLE_TO_CREATE_FOLDER.replace(FOLDER_NAME_DYNAMIC_PARAM, folderName)); 
+					UNABLE_TO_CREATE_FOLDER.replace(FOLDER_NAME_DYNAMIC_PARAM, folderName), null); 
 		}
 		
 		
@@ -206,7 +295,7 @@ public class MosipAPIHandlerResourceImpl
 		return null;
 	}
 	
-	/*
+	/**
 	 * This method is used to Process Identifier and Mapping
 	 *
 	 * @param identifierNumber
@@ -237,18 +326,98 @@ public class MosipAPIHandlerResourceImpl
 			e.printStackTrace();
 		}
 	}
-	
-	@Override
-		public Page<DocumentResult> updateMosipDocument(String ModuleType,
-				String ConsumerCode, String DocumentType, String IdentifierNumber,
-				String Metadata, String PreviousModuleType,
-				String PreviousIdentifier, MultipartBody multipartBody)
-				throws Exception {
-			return super.updateMosipDocument(ModuleType, ConsumerCode, DocumentType,
-					IdentifierNumber, Metadata, PreviousModuleType, PreviousIdentifier,
-					multipartBody);
+
+	/**
+	 * Get folder. If folder is not present, this method will create one and
+	 * return the same.
+	 * 
+	 * @param folderName
+	 * @param serviceContext
+	 * @return Folder
+	 * @throws PortalException
+	 */
+	private Folder getFolder(String folderName, boolean createNew, ServiceContext serviceContext)
+			throws PortalException {
+		DLFolder dlFolder = isFolderExist(folderName, serviceContext);
+		Folder folder = null;
+		if (null == dlFolder && createNew) {
+			try {
+				folder = DLAppServiceUtil.addFolder(
+						serviceContext.getScopeGroupId(),
+						CommonConstants.JIRA_PARENT_FOLDER_ID, folderName,
+						folderName, serviceContext);
+			} catch (PortalException e) {
+				if (_log.isErrorEnabled()) {
+					_log.error(e);
+				}
+			} catch (SystemException e) {
+				if (_log.isErrorEnabled()) {
+					_log.error(e);
+				}
+			}
+		} else {
+			folder = DLAppServiceUtil.getFolder(dlFolder.getFolderId());
 		}
-	
+		return folder;
+	}
+
+	/**
+	 * Method to check if folder exists or not
+	 * 
+	 * @param folderName
+	 * @param serviceContext
+	 * @return DLFolder
+	 */
+	private DLFolder isFolderExist(String folderName,
+			ServiceContext serviceContext) {
+		DLFolder dlFolder = null;
+
+		try {
+			dlFolder = DLFolderLocalServiceUtil.getFolder(
+					serviceContext.getScopeGroupId(),
+					CommonConstants.JIRA_PARENT_FOLDER_ID, folderName);
+		} catch (PortalException e) {
+			if (_log.isErrorEnabled()) {
+				_log.error(e);
+			}
+		}
+
+		return dlFolder;
+	}
+
+	/**
+	 * Method to fetch File
+	 * 
+	 * @param folder
+	 * @param documentTitle
+	 * @param serviceContext
+	 * @return
+	 * @throws PortalException
+	 */
+	private FileEntry getFileEntry(Folder folder, String fileName,
+			ServiceContext serviceContext) {
+
+		FileEntry fileEntry = null;
+
+		try {
+			fileEntry = DLAppServiceUtil.getFileEntry(
+					serviceContext.getScopeGroupId(), folder.getFolderId(),
+					fileName.toString());
+
+		} catch (PortalException e) {
+			if (_log.isErrorEnabled()) {
+				_log.error(e);
+			}
+		}
+		return fileEntry;
+	}
+
+	private static void debugLog(Object msg) {
+		//if(_log.isDebugEnabled()) {
+			_log.debug(msg);
+		//}
+	}
+
 	private static final Log _log = LogFactoryUtil.getLog(
 			MosipAPIHandlerResourceImpl.class);
 }
